--- a/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/RawMaterialReturnList.cshtml
@@ -193,15 +193,27 @@
                 $.when(postReqWithToken(dataType.applicationJson, dataType.json, 'POST', '/AgroConfiguration/AcceptRawMaterialReturnInfo', data , getToken())).then(function (res, status)
                 {
                     debugger;
-                            if (res === true) {
+
+                    if (res.IsSuccess === true) {
                                 $('.toastrDefaultSuccess').trigger('click');
-                    //             var RawMaterialName = res.File;
-                    //window.open("/AgroConfiguration/GetRawMaterialReturnReport?RawMaterialName=" + RawMaterialName, "_blank");
+                    var ReturnRawMaterialId = res.File;
+                        window.open("/AgroConfiguration/GetRawMaterialReturnReportApproved?ReturnRawMaterialId=" + ReturnRawMaterialId, "_blank");
+                               
+                                setTimeout(function () {
+                                    redirectPage('@Url.Action("RawMaterialReturnList")');
+                                }, 500);
+                              
+                            }
+
+
+                            @*if (res === true) {
+                                $('.toastrDefaultSuccess').trigger('click');
+                   
                                 setTimeout(function () {
                                     redirectPage('@Url.Action("RawMaterialReturnList")');
                                 }, 1000);
                                
-                            }
+                            }*@
                             else {
                                 $('.toastrDefaultError').trigger('click');
                             }
