--- a/ERPWeb/Views/Shared/_Layout.cshtml
+++ b/ERPWeb/Views/Shared/_Layout.cshtml
@@ -81,6 +81,7 @@
     <script src="~/Scripts/jquery.overlayScrollbars.min.js"></script>
     <!-- AdminLTE App -->
     <script src="~/Scripts/Chart.min.js"></script>
+    <script src="~/Scripts/canvasjs.min.js"></script>
     <script src="~/Scripts/sparkline.js"></script>
     <script src="~/Content/dist/js/adminlte.js"></script>
     <script src="~/Scripts/jquery.dataTables.js"></script>
@@ -334,7 +335,7 @@
             // check this out on a mobile device.
             if (/Mobi/.test(navigator.userAgent)) {
                 setInterval(function () {
-                   // navigator.vibrate();
+                    // navigator.vibrate();
                 }, 3000);
             }
 
