--- a/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetMeasurementList.cshtml
@@ -3,9 +3,9 @@
         int sl = 0;
     }
 <div class="col-md-12">
-    <table class="table table-responsive-lg table-striped">
-        <thead>
-            <tr class="btn-dark">
+    <table class="table table-bordered table-sm table-striped table-responsive-lg text-sm">
+        <thead class="btn-dark">
+            <tr class="text-center text-bold">
                 <th>SL</th>
                 <th>MeasureMent Name</th>
                 <th>MeasureMent Item</th>
@@ -19,16 +19,16 @@
             {
                 sl++;
             <tr>
-                <td>@sl</td>
+                <td class="text-center">@sl</td>
                 <td class="hide">@item.MeasurementId</td>
-                <td>@item.MeasurementName</td>
-                <td>@item.PackageName </td>
+                <td class="text-center">@item.MeasurementName</td>
+                <td class="text-center">@item.PackageName </td>
                 <td class="hide">@item.MasterCarton</td>
                 <td class="hide">@item.InnerBox</td>
                 <td class="hide">@item.PackSize</td>
-                <td>@item.UnitName</td>
+                <td class="text-center">@item.UnitName</td>
                 <td class="hide">@item.UnitId</td>
-                <td>@item.Status</td>
+                <td class="text-center">@item.Status</td>
                 <td class="hide">@item.UnitKG</td>
                 <td>
                     <a href="#" class="btn btn-warning btn-sm data-edit-item-measurement" data-edit-item-measurement="@item.MeasurementId"><i class="fa fa-pen"></i>Edit</a>
