--- a/ERPWeb/Views/Common/_sidebar.cshtml
+++ b/ERPWeb/Views/Common/_sidebar.cshtml
@@ -1,11 +1,22 @@
 ﻿@model IEnumerable<ERPBO.ControlPanel.ViewModels.UserMainMenuViewModel>
 
 <!-- Sidebar Menu -->
+@*<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="clearfix">
+                <button type="submit" class="btn btn-sm float-left btn-outline-success" id="addButton">Dashboard</button>
+            </div>
+        </div>
+    </div>
+
+</div>*@
+
 <nav class="mt-2 text-sm">
     <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
 
         @foreach (var mm in Model)
-          {
+        {
             <li class="nav-item has-treeview">
                 <a href="#" class="nav-link">
                     <i class="nav-icon fas fa-list"></i>
