--- a/ERPWeb/Views/User/Index.cshtml
+++ b/ERPWeb/Views/User/Index.cshtml
@@ -3,10 +3,267 @@
     ViewBag.Title = "Index";
 }
 
-<div class="row">
-    <div class="col-md-12">
-        <h4 class="m-0 text-dark"><i class="fas fa-fire" style="color:#ff7615"></i> Dashboard</h4>
-        <hr />
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <div id="chartContainerRM" style="height: 200px; width: 500px; margin-bottom:5px">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div id="chartContainerFG" style="height: 200px; width: 500px; margin-bottom:5px">
+            </div>
+        </div>
     </div>
+    <div class="row ">
+
+        <div class="col-md-6">
+            <div id="chartContainer" style="height: 200px; width: 500px;">
+            </div>
+        </div>
+        <div class="col-md-6">
+            <div id="chartContainerCollection" style="height: 200px; width: 500px;">
+            </div>
+        </div>
+
+
+
+    </div>
+    
+    @*<div class="row " style="margin-top: 10px">
+
+   
+    </div>*@
 </div>
 
+<script type="text/javascript" src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+
+<script type="text/javascript">
+    
+    window.onload = function () {
+        var chartCollection = new CanvasJS.Chart("chartContainerCollection",
+            {
+                title: {
+                    text: "Monthly Collection Chart"
+                },
+                axisX: {
+                    //title: "timeline",
+                    gridThickness: 1
+                },
+                //axisY: {
+                //    title: "Downloads"
+                //},
+                data: [
+                    {
+                        type: "spline",
+                        dataPoints: [//array
+                            { x: new Date(2022, 10, 1), y: 5000 },
+                            { x: new Date(2022, 10, 2), y: 3000 },
+                            { x: new Date(2022, 10, 3), y: 4000 },
+                            { x: new Date(2022, 10, 4), y: 8000 },
+                            { x: new Date(2022, 10, 5), y: 40000 },
+                            { x: new Date(2022, 10, 6), y: 42855 },
+                            { x: new Date(2022, 10, 7), y: 47000 },
+                            { x: new Date(2022, 10, 8), y: 5800 },
+                            { x: new Date(2022, 10, 9), y: 6900 },
+                            { x: new Date(2022, 10, 10), y: 6000 },
+
+                            { x: new Date(2022, 10, 11), y: 5100 },
+                            { x: new Date(2022, 10, 12), y: 3200 },
+                            { x: new Date(2022, 10, 13), y: 4300 },
+                            { x: new Date(2022, 10, 14), y: 8500 },
+                            { x: new Date(2022, 10, 15), y: 43000 },
+                            { x: new Date(2022, 10, 16), y: 42855 },
+                            { x: new Date(2022, 10, 17), y: 47000 },
+                            { x: new Date(2022, 10, 18), y: 5900 },
+                            { x: new Date(2022, 10, 19), y: 7000 },
+                            { x: new Date(2022, 10, 20), y: 9000 },
+
+                            { x: new Date(2022, 10, 21), y: 2600 },
+                            { x: new Date(2022, 10, 22), y: 5800 },
+                            { x: new Date(2022, 10, 23), y: 6300 },
+                            { x: new Date(2022, 10, 24), y: 31890 }
+                            //{ x: new Date(2022, 11, 25), y: 51 },
+                            //{ x: new Date(2022, 11, 26), y: 54 },
+                            //{ x: new Date(2022, 11, 27), y: 86 },
+                            //{ x: new Date(2022, 11, 28), y: 90 },
+                            //{ x: new Date(2022, 11, 29), y: 13 },
+                            //{ x: new Date(2022, 11, 30), y: 20 },
+
+                        ]
+                    }
+                ]
+            });
+        chartCollection.render();
+
+        var chartSales = new CanvasJS.Chart("chartContainer",
+            {
+                title: {
+                    text: "Monthly Sales Chart"
+                },
+                axisX: {
+                    //title: "timeline",
+                    gridThickness: 1
+                },
+                //axisY: {
+                //    title: "Downloads"
+                //},
+                data: [
+                    {
+                        type: "spline",
+                        dataPoints: [//array
+                            { x: new Date(2022, 10, 1), y: 2600 },
+                            { x: new Date(2022, 10, 2), y: 3800 },
+                            { x: new Date(2022, 10, 3), y: 4300 },
+                            { x: new Date(2022, 10, 4), y: 1100 },
+                            { x: new Date(2022, 10, 5), y: 4100 },
+                            { x: new Date(2022, 10, 6), y: 5400 },
+                            { x: new Date(2022, 10, 7), y: 6600 },
+                            { x: new Date(2022, 10, 8), y: 6000 },
+                            { x: new Date(2022, 10, 9), y: 5300 },
+                            { x: new Date(2022, 10, 10), y: 6000 },
+
+                            { x: new Date(2022, 10, 11), y: 1000 },
+                            { x: new Date(2022, 10, 12), y: 2800 },
+                            { x: new Date(2022, 10, 13), y: 7300 },
+                            { x: new Date(2022, 10, 14), y: 2900 },
+                            { x: new Date(2022, 10, 15), y: 800 },
+                            { x: new Date(2022, 10, 16), y: 5400 },
+                            { x: new Date(2022, 10, 17), y: 3600 },
+                            { x: new Date(2022, 10, 18), y: 7000 },
+                            { x: new Date(2022, 10, 19), y: 800 },
+                            { x: new Date(2022, 10, 20), y: 900 },
+
+                            { x: new Date(2022, 10, 21), y: 2600 },
+                            { x: new Date(2022, 10, 22), y: 5800 },
+                            { x: new Date(2022, 10, 23), y: 6300 },
+                            { x: new Date(2022, 10, 24), y: 4900 }
+                            //{ x: new Date(2022, 11, 25), y: 51 },
+                            //{ x: new Date(2022, 11, 26), y: 54 },
+                            //{ x: new Date(2022, 11, 27), y: 86 },
+                            //{ x: new Date(2022, 11, 28), y: 90 },
+                            //{ x: new Date(2022, 11, 29), y: 13 },
+                            //{ x: new Date(2022, 11, 30), y: 20 },
+
+                        ]
+                    }
+                ]
+            });
+        chartSales.render();
+
+        var chartRM = new CanvasJS.Chart("chartContainerRM",
+            {
+                title: {
+                    text: "R.M Stock"
+                },
+                legend: {
+                    maxWidth: 500,
+                    itemWidth: 200
+                },
+                data: [
+                    {
+                        type: "pie",
+                        showInLegend: true,
+                        legendText: "{indexLabel}",
+                        dataPoints: [
+                            { y: 1602002, indexLabel: "4.cpa gm" },
+                            { y: 1323000, indexLabel: "Chelated zinc 10% kg" },
+                            { y: 1323000, indexLabel: "Solubor Boron 20% kg" },
+                            { y: 7101000, indexLabel: "CMC kg" },
+                            { y: 7056000, indexLabel: "Apple Green Colour kg" },
+                            { y: 8667000, indexLabel: "Zipsum gm" },
+                            { y: 7731000, indexLabel: "Dolomight-500+Naphtholic Acetic Acid-98 kg" },
+                            { y: 7101000, indexLabel: "Dolomight" }
+                        ]
+                    }
+                ]
+            });
+        chartRM.render();
+        var chartFGProduct = new CanvasJS.Chart("chartContainerFG",
+            {
+                title: {
+                    text: "F.G Product Stock"
+                },
+                legend: {
+                    maxWidth: 500,
+                    itemWidth: 200
+                },
+                data: [
+                    {
+                        type: "pie",
+                        showInLegend: true,
+                        legendText: "{indexLabel}",
+                        dataPoints: [
+                            { y: 420, indexLabel: "Nava(1kg)" },
+                            { y: 440, indexLabel: "Nava(100ml)" },
+                            { y: 470, indexLabel: "Nava(500ml)" },
+                            { y: 500, indexLabel: "Nava Root(1kg)" }
+
+                        ]
+                    }
+                ]
+            });
+        chartFGProduct.render();
+
+    }
+    
+</script>
+
+@*<script type="text/javascript">
+    window.onload = function () {
+        var chart = new CanvasJS.Chart("chartContainerCollection",
+            {
+                title: {
+                    text: "Monthly Collection Chart"
+                },
+                axisX: {
+                    //title: "timeline",
+                    gridThickness: 1
+                },
+                //axisY: {
+                //    title: "Downloads"
+                //},
+                data: [
+                    {
+                        type: "spline",
+                        dataPoints: [//array
+                            { x: new Date(2022, 10, 1), y: 5000 },
+                            { x: new Date(2022, 10, 2), y: 3000 },
+                            { x: new Date(2022, 10, 3), y: 4000 },
+                            { x: new Date(2022, 10, 4), y: 8000 },
+                            { x: new Date(2022, 10, 5), y: 40000 },
+                            { x: new Date(2022, 10, 6), y: 42855 },
+                            { x: new Date(2022, 10, 7), y: 47000 },
+                            { x: new Date(2022, 10, 8), y: 5800 },
+                            { x: new Date(2022, 10, 9), y: 6900 },
+                            { x: new Date(2022, 10, 10), y: 6000 },
+
+                            { x: new Date(2022, 10, 11), y: 5100 },
+                            { x: new Date(2022, 10, 12), y: 3200 },
+                            { x: new Date(2022, 10, 13), y: 4300 },
+                            { x: new Date(2022, 10, 14), y: 8500 },
+                            { x: new Date(2022, 10, 15), y: 43000 },
+                            { x: new Date(2022, 10, 16), y: 42855 },
+                            { x: new Date(2022, 10, 17), y: 47000 },
+                            { x: new Date(2022, 10, 18), y: 5900 },
+                            { x: new Date(2022, 10, 19), y: 7000 },
+                            { x: new Date(2022, 10, 20), y: 9000 },
+
+                            { x: new Date(2022, 10, 21), y: 2600 },
+                            { x: new Date(2022, 10, 22), y: 5800 },
+                            { x: new Date(2022, 10, 23), y: 6300 },
+                            { x: new Date(2022, 10, 24), y: 4900 }
+                            //{ x: new Date(2022, 11, 25), y: 51 },
+                            //{ x: new Date(2022, 11, 26), y: 54 },
+                            //{ x: new Date(2022, 11, 27), y: 86 },
+                            //{ x: new Date(2022, 11, 28), y: 90 },
+                            //{ x: new Date(2022, 11, 29), y: 13 },
+                            //{ x: new Date(2022, 11, 30), y: 20 },
+
+                        ]
+                    }
+                ]
+            });
+
+        chart.render();
+    }
+</script>*@
