--- a/ERPWeb/Views/Shared/_Layout.cshtml
+++ b/ERPWeb/Views/Shared/_Layout.cshtml
@@ -97,6 +97,8 @@
     <script src="~/Scripts/download.js"></script>
     <script src="~/Scripts/print.js"></script>
     <script src="~/Scripts/ds.js"></script>
+    <script type="text/javascript"  src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.2.2/Chart.bundle.min.js">
+    </script>
     <link href="~/Content/dist/css/dashboardCSS.css" rel="stylesheet" />
 
     <script type="text/javascript">
