--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
@@ -91,7 +91,7 @@
 
             if (item.RT == 1)
             {
-                <tr style="background-color: #008B8B; text">
+                <tr style="background-color: #008B8B;">
                     <td class="text-center">@sl</td>
                     <td class="text-center">@item.FinishGoodProductName</td>
                     <td class="text-center">@item.MeasurementSize</td>
