--- a/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/GetPRawmaterialStockList.cshtml
@@ -201,8 +201,12 @@
                                                                 @Html.DropDownList("ddlRawMaterial", (IEnumerable<SelectListItem>)ViewBag.ddlRawMaterial, "--Select RawMaterial--", new { @class = "form-control form-control-sm ctrl-changed select2 select2-danger" })
                                                                 <span class="error hide req-ddlRawMaterial">RawMaterial Is Required</span>
                                                             </div>
-
                                                             <div class="col-md-2">
+                                                                <label for="ddlrmcode">RM Code</label>
+                                                                <input type="text" id="ddlrmcode" name="qty" class="form-control form-control-sm" />
+                                                                <span class="error hide req-ddlrmcode">Code Is Required</span>
+                                                            </div>
+                                                            <div class="col-md-1">
                                                                 <label for="ddlUnitName">Unit</label>
                                                                 <input type="text" id="ddlUnitName" name="ddlUnitName" class="form-control form-control-sm" readonly />
                                                             </div>
@@ -216,7 +220,7 @@
                                                                 <input type="number" id="ddluprice" name="uprice" class="form-control form-control-sm" />
                                                                 <span class="error hide req-uprice">Unit Price Is Required</span>
                                                             </div>
-                                                            <div class="col-md-2">
+                                                            <div class="col-md-1">
                                                                 <label for="ddlqty"> Qty</label>
                                                                 <input type="number" id="ddlqty" name="qty" class="form-control form-control-sm" />
                                                                 <span class="error hide req-qty">Qty Is Required</span>
@@ -237,8 +241,8 @@
                                                                         </span>
                                                                     </div>
                                                                 </div>
-      
                                                             </div>
+
 
                                                             <div class="col-md-1">
                                                                 <label for="" class="control-label font-weight-bold" style="visibility:hidden">Add</label>
@@ -272,6 +276,7 @@
 
                                             <th>#SL</th>
                                             <th>Raw Material</th>
+                                            <th>RM Code</th>
                                             <th>Unit</th>
                                             <th>Unit Price</th>
                                             <th>QTY</th>
@@ -362,7 +367,7 @@
 <div class="modal fade" id="PurchaseDetails" role="dialog" tabindex="-1" aria-hidden="true">
     <div class="modal-dialog modal-lg" role="document">
         <div class="modal-content">
-            <div class="modal-header alert-secondary">
+            <div class="modal-header bg-gradient-gray-dark">
                 <h4 id="modalHeading" class="modal-title">Raw Material Stock & Purchase Details</h4>
                 <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
             </div>
@@ -402,6 +407,7 @@
         var ddluprice = $("#ddluprice");
         var ddlttprice = $("#ddlttprice");
         var ddlUnitID = $("#ddlUnitID");
+        var ddlrmcode = $("#ddlrmcode");
         var ddlRawMaterialList = [];
         var searchByAny = $("#searchByAny");
         var searchByAnyy = $("#searchByAnyy");
@@ -617,18 +623,19 @@
                 var sl = $("#tblPstockrawmaterial tbody tr").length;
                 var td1 = "<td class='text-center'><b>" + (sl + 1) + "</b></td>"
                 var td2 = "<td class='text-center'>" + dropDownSelectedText("ddlRawMaterial") + "</td>";
-                var td3 = "<td class='text-center'>" + ddlUnitName.val() + "</td>";
-                var td4 = "<td class='text-center'>" + ddluprice.val() + "</td>";
-                var td5 = "<td class='text-center QuanityIDCell'>" + ddlqty.val() + "</td>";
-                var td6 = "<td class='text-center TotalIDCell'>" + ddlttprice.val() + "</td>";
-                var td7 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del' data-subtotal='" + ddlttprice.val() + "' data-quentaty='" + ddlqty.val() +"'><i class='far fa-trash-alt'></i> Delete</a></td>";
+                var td3 = "<td class='text-center'>" + ddlrmcode.val() + "</td>";
+                var td4 = "<td class='text-center'>" + ddlUnitName.val() + "</td>";
+                var td5 = "<td class='text-center'>" + ddluprice.val() + "</td>";
+                var td6 = "<td class='text-center QuanityIDCell'>" + ddlqty.val() + "</td>";
+                var td7 = "<td class='text-center TotalIDCell'>" + ddlttprice.val() + "</td>";
+                var td8 = "<td class='text-center'><a href='#' class='btn btn-sm btn-danger data-onfly-del' data-subtotal='" + ddlttprice.val() + "' data-quentaty='" + ddlqty.val() +"'><i class='far fa-trash-alt'></i> Delete</a></td>";
 
-                var td8 = "<td class='text-center hide'>" + ddlRawMaterial.val() + "</td>";
-                var td9 = "<td class='text-center hide'>" + ddlUnitID.val() + "</td>";
+                var td9 = "<td class='text-center hide'>" + ddlRawMaterial.val() + "</td>";
+                var td10 = "<td class='text-center hide'>" + ddlUnitID.val() + "</td>";
 
-                var td10 = "<td class='text-center hide'>" + ddlexpdate.val() + "</td>";
+                var td11 = "<td class='text-center hide'>" + ddlexpdate.val() + "</td>";
 
-                var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + "</tr>";
+                var tr = "<tr>" + td1 + td2 + td3 + td4 + td5 + td6 + td7 + td8 + td9 + td10 + td11 + "</tr>";
 
 
                 //totalprice
@@ -678,13 +685,14 @@
                             var tds = $(this).children('td');
                             details.push({
                                 PRawMaterialStockDetailId: 0,
-                                RawMaterialId: tds.eq(7).html(),
-                                UnitID: tds.eq(8).html(),
-                                UnitPrice: tds.eq(3).html(),
-                                Quantity: tds.eq(4).html(),
-                                SubTotal: tds.eq(5).html(),
+                                RawMaterialId: tds.eq(8).html(),
+                                UnitID: tds.eq(9).html(),
+                                UnitPrice: tds.eq(4).html(),
+                                Quantity: tds.eq(5).html(),
+                                SubTotal: tds.eq(6).html(),
 
-                                ExpireDate: tds.eq(9).html(),
+                                ExpireDate: tds.eq(10).html(),
+                                RmMRPCode: tds.eq(2).html(),
 
                             });
                         })
@@ -798,6 +806,7 @@
             ddlUnitID.val("");
             ddlttprice.val("");
             ddluprice.val("");
+            ddlrmcode.val("");
         }
 
         //master
