--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesReturn.cshtml
@@ -9,7 +9,7 @@
 <table class="table table-bordered table-striped table-sm table-responsive-lg text-sm">
     @if (info != null)
     {
-        <tr>
+        <tr  style="background-color: #008B8B;">
             <td style="width:5%">Invoice</td>
             <td style="width:15%"><b>@info.InvoiceNo</b></td>
             <td style="width:5%">Date</td>
@@ -48,34 +48,105 @@
         @foreach (var item in Model)
         {
             sl = sl + 1;
-            <tr>
-                <td class="text-center">@sl</td>
-                <td class="text-center">@item.FinishGoodProductName</td>
-                <td class="text-center">@item.QtyKG</td>
-                <td class="text-center hide">@item.MeasurementName</td>
-                <td class="text-center">@item.MeasurementSize</td>
-                <td class="text-center hide">@item.TotalCurrentQTY</td>
-                <td class="text-center">@item.CurrentQTY</td>
-                <td class="text-center">@item.Price</td>
-                <td class="text-center" style="width:10%">
-                    <input type="number" class="returnqty form-control form-control-sm" value="0" />
-                    <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
-                </td>
-                <td class="text-center" style="width:15%">
-                    <input type="number" class="returnprice form-control form-control-sm " value="0" />
-                    @*<span class="error hide">Quantity must be <=available Quantity</span>*@
-                </td>
-                @*<td class="text-center " contenteditable='true'></td>
+
+            if (item.RT == 1)
+            {
+                <tr style="background-color: #FFA07A;">
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.QtyKG</td>
+                    <td class="text-center hide">@item.MeasurementName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
+                    <td class="text-center hide">@item.TotalCurrentQTY</td>
+                    <td class="text-center">@item.CurrentQTY</td>
+                    <td class="text-center">@item.Price</td>
+                    <td class="text-center" style="width:10%">
+                        <input type="number" class="returnqty form-control form-control-sm" value="0" readonly />
+                        <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
+                    </td>
+                    <td class="text-center" style="width:15%">
+                        <input type="number" class="returnprice form-control form-control-sm " value="0" readonly />
+                        @*<span class="error hide">Quantity must be <=available Quantity</span>*@
+                    </td>
+                    @*<td class="text-center " contenteditable='true'></td>
                     <td class="text-center" contenteditable='true'></td>*@
-                @*<td class="text-center"><input type="number" /></td>
+                    @*<td class="text-center"><input type="number" /></td>
                     <td class="text-center"><input type="number" /></td>*@
-                @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
-                <td class="hide">@item.FinishGoodProductInfoId</td>
-                <td class="hide">@item.MeasurementId</td>
-                <td class="hide">@item.FGRId</td>
+                    @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
+                    <td class="hide">@item.FinishGoodProductInfoId</td>
+                    <td class="hide">@item.MeasurementId</td>
+                    <td class="hide">@item.FGRId</td>
 
 
-            </tr>
+                </tr>
+
+            }
+            else if (item.CurrentQTY == 0)
+            {
+                <tr>
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.QtyKG</td>
+                    <td class="text-center hide">@item.MeasurementName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
+                    <td class="text-center hide">@item.TotalCurrentQTY</td>
+                    <td class="text-center bg-danger">@item.CurrentQTY</td>
+                    <td class="text-center">@item.Price</td>
+                    <td class="text-center " style="width:10%">
+                        <input type="number" class="returnqty form-control form-control-sm" value="0" readonly />
+                        <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
+                    </td>
+                    <td class="text-center " style="width:15%">
+                        <input type="number" class="returnprice form-control form-control-sm " value="0" readonly />
+                        @*<span class="error hide">Quantity must be <=available Quantity</span>*@
+                    </td>
+                    @*<td class="text-center " contenteditable='true'></td>
+                    <td class="text-center" contenteditable='true'></td>*@
+                    @*<td class="text-center"><input type="number" /></td>
+                    <td class="text-center"><input type="number" /></td>*@
+                    @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
+                    <td class="hide">@item.FinishGoodProductInfoId</td>
+                    <td class="hide">@item.MeasurementId</td>
+                    <td class="hide">@item.FGRId</td>
+
+
+                </tr>
+
+            }
+            else
+            {
+                <tr>
+                    <td class="text-center">@sl</td>
+                    <td class="text-center">@item.FinishGoodProductName</td>
+                    <td class="text-center">@item.QtyKG</td>
+                    <td class="text-center hide">@item.MeasurementName</td>
+                    <td class="text-center">@item.MeasurementSize</td>
+                    <td class="text-center hide">@item.TotalCurrentQTY</td>
+                    <td class="text-center">@item.CurrentQTY</td>
+                    <td class="text-center">@item.Price</td>
+                    <td class="text-center" style="width:10%">
+                        <input type="number" class="returnqty form-control form-control-sm" value="0" />
+                        <span class="error hide">Rerurn Quantity must be less then or equal sales qty</span>
+                    </td>
+                    <td class="text-center" style="width:15%">
+                        <input type="number" class="returnprice form-control form-control-sm " value="0" />
+                        @*<span class="error hide">Quantity must be <=available Quantity</span>*@
+                    </td>
+                    @*<td class="text-center " contenteditable='true'></td>
+                    <td class="text-center" contenteditable='true'></td>*@
+                    @*<td class="text-center"><input type="number" /></td>
+                    <td class="text-center"><input type="number" /></td>*@
+                    @*<td class="hide"><input type="number" />@item.ProductSalesInfoId</td>*@
+                    <td class="hide">@item.FinishGoodProductInfoId</td>
+                    <td class="hide">@item.MeasurementId</td>
+                    <td class="hide">@item.FGRId</td>
+
+
+                </tr>
+
+            }
+
+
         }
     </tbody>
 </table>
